force-app/main/default/objects/Apttus_Config2__BundleComponentView__c/Apttus_Config2__BundleComponentView__c.object-meta.xml
<CustomObject>
    <description>Keeps the list references of component products related to the bundle and sub bundle</description>
    <label>Bundle Component View</label>
    <nameField>
        <label>Bundle Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bundle Components</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>