force-app/main/default/objects/Apttus_Config2__BundleComponentView__c/fields/Apttus_Config2__BundleProductId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__BundleProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The name of the bundle product id</description>
    <label>Bundle Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Bundle Components</relationshipLabel>
    <relationshipName>SystemComponents</relationshipName>
    <type>Lookup</type>
</CustomField>