force-app/main/default/objects/Apttus_Config2__BundleComponentView__c/fields/Apttus_Config2__Depth__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Depth__c</fullName>
    <description>Depth of the Component</description>
    <label>Depth</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>