force-app/main/default/objects/Apttus_Config2__BundleComponentView__c/fields/Apttus_Config2__ParentProductOptionComponentId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ParentProductOptionComponentId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the parent Product Option Component</description>
    <label>Parent Product Option Component</label>
    <referenceTo>Apttus_Config2__ProductOptionComponent__c</referenceTo>
    <relationshipName>ChildSystemComponents</relationshipName>
    <type>Lookup</type>
</CustomField>