force-app/main/default/objects/Apttus_Config2__BundleComponentView__c/fields/Apttus_Config2__ProductOptionComponentId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductOptionComponentId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The product option component associated with the system.</description>
    <label>Product Option Component</label>
    <referenceTo>Apttus_Config2__ProductOptionComponent__c</referenceTo>
    <relationshipName>SystemComponents</relationshipName>
    <type>Lookup</type>
</CustomField>