force-app/main/default/objects/Apttus_Config2__BundleComponentView__c/listViews/Apttus_Config2__All.listView-meta.xml
<ListView>
    <fullName>Apttus_Config2__All</fullName>
    <columns>Apttus_Config2__BundleProductId__c</columns>
    <columns>Apttus_Config2__Depth__c</columns>
    <columns>Apttus_Config2__ParentProductOptionComponentId__c</columns>
    <columns>Apttus_Config2__ProductOptionComponentId__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>